bug fixes, navbar blur on safari demo delted on startup

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -30,6 +30,8 @@
 
 .container div p {
     line-height: 30px;
+    font-size: 14px;
+    font-weight: 500;
 }
 
 @media only screen and (max-width: 520px) {
