--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -6,6 +6,7 @@
     justify-content: center;
     overflow: hidden;
     margin: 50px 0px;
+    gap: 5px;
 }
 
 .gallery .images {
