--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,6 +11,7 @@
 .navbar .blur {
     border-bottom: solid 1px #000;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 
 }
 
@@ -99,7 +100,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    /* z-index: 1999; */
     width: 100%;
     height: 100000px;
 }
